[gd_scene load_steps=5 format=3 uid="uid://hl2i4fr237v2"]

[ext_resource type="Script" path="res://Scripts/missile_explosion.gd" id="1_5wtq6"]
[ext_resource type="Texture2D" uid="uid://d3mp41ey6n33k" path="res://Effects/Textures/Smoke.png" id="1_aiulc"]
[ext_resource type="Material" uid="uid://du5fn070voo2a" path="res://Effects/ProcessMaterials/MissileExplosion_Fire.tres" id="2_ou7yc"]
[ext_resource type="Material" uid="uid://bk5l5xccqume2" path="res://Effects/ProcessMaterials/MissileExplosion_Smoke.tres" id="4_770k6"]

[node name="MissileExplosion" type="Node2D"]
script = ExtResource("1_5wtq6")

[node name="Explosion_Fire" type="GPUParticles2D" parent="."]
emitting = false
amount = 64
process_material = ExtResource("2_ou7yc")
texture = ExtResource("1_aiulc")
lifetime = 0.15
one_shot = true

[node name="Explosion_Smoke" type="GPUParticles2D" parent="."]
show_behind_parent = true
z_index = -1
emitting = false
amount = 64
process_material = ExtResource("4_770k6")
texture = ExtResource("1_aiulc")
lifetime = 0.3
one_shot = true
speed_scale = 2.0

[connection signal="finished" from="Explosion_Smoke" to="." method="_on_explosion_smoke_finished"]
